--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "firebase-admin": "^5.12.1",
+    "moment": "^2.22.2",
     "request": "^2.87.0",
     "underscore": "^1.9.1"
   }
